@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-23T01:40:08Z",
+  "timestamp" : "2024-09-26T01:39:13Z",
   "count_outdated" : 484,
   "uniques_outdated" : 122,
-  "count" : 493,
-  "uniques" : 127,
+  "count" : 495,
+  "uniques" : 128,
   "views" : [
     {
       "timestamp": "2024-09-12T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-09-25T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
