@@ -1,6 +1,6 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 11,
+  "uniques": 6,
   "views": [
     {
       "timestamp": "2024-09-12T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2024-09-19T00:00:00Z",
       "count": 6,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-09-25T00:00:00Z",
+      "count": 2,
+      "uniques": 1
     }
   ]
 }
